<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="@dimen/main_screen_main_layout_padding"
    >

   <ImageView
       android:src="@drawable/img_main_page"
       android:id="@+id/ImageView"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toTopOf="@+id/flStart"
       android:layout_width="match_parent"
       android:layout_height="220dp"
       android:contentDescription="@string/start_image"/>
    <FrameLayout
        app:layout_constraintTop_toBottomOf="@+id/ImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/flStart"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/item_color_accent_border_ripple_background"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_gravity="center"
            android:textSize="@dimen/default_button_text_size"
            android:textStyle="bold"
            android:textColor="@color/ColorPrimary"/>


    </FrameLayout>

    <FrameLayout
        android:id="@+id/flBMI"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/item_circular_accent_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/flHistory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flStart">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bmi"
            android:textColor="@color/white"
            android:textSize="@dimen/default_button_text_size"
            android:textStyle="bold" />
    </FrameLayout>
    <TextView
        app:layout_constraintTop_toBottomOf="@id/flBMI"
        app:layout_constraintStart_toStartOf="@id/flBMI"
        app:layout_constraintEnd_toEndOf="@id/flBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:text="@string/calculator"
        android:textColor="@color/ColorAccent"
        android:textSize="@dimen/default_button_text_size"
        android:textStyle="bold" />


    <FrameLayout
        android:id="@+id/flHistory"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:background="@drawable/item_circular_accent_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/flBMI"
        app:layout_constraintTop_toBottomOf="@+id/flStart">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/baseline_history_24" />
    </FrameLayout>
    <TextView
        app:layout_constraintTop_toBottomOf="@id/flHistory"
        app:layout_constraintStart_toStartOf="@id/flHistory"
        app:layout_constraintEnd_toEndOf="@id/flHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:text="@string/history"
        android:textColor="@color/ColorAccent"
        android:textSize="@dimen/default_button_text_size"
        android:textStyle="bold" />

</androidx.constraintlayout.widget.ConstraintLayout>