<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ExerciseActivity">
<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbarExercise"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_width="match_parent"
    android:theme="@style/ToolbarTheme"
    android:layout_height="?android:attr/actionBarSize"
    android:background="@color/white"
    app:titleTextColor="@color/ColorPrimary"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_ready_for"
        android:textColor="@color/ColorAccent"
        android:textSize="@dimen/default_button_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/flRestView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <FrameLayout
        android:id="@+id/flRestView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/item_circular_color_accent_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarExercise">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:max="10"
            android:background="@drawable/circular_progress_grey"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:indeterminate="false"
            android:progress="100"
            android:rotation="-90"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
           android:layout_gravity="center"
            android:background="@drawable/item_circular_accent_background"
            android:gravity="center"
            >
        <TextView
            android:id="@+id/tvTimer"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:text="@string/_10"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        </LinearLayout>
    </FrameLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/upcoming_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvUpcomingLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flRestView"
        app:layout_constraintBottom_toTopOf="@+id/tvUpcomingExerciseName"
        />
    <TextView
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:textColor="@color/black"
        android:text="@string/exercisename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvUpcomingExerciseName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flRestView"
        app:layout_constraintBottom_toTopOf="@+id/tvUpcomingExerciseName"
        tools:ignore="NotSibling" />

    <ImageView
        android:id="@+id/ivImage"
        android:visibility="invisible"
        android:src="@drawable/ic_jumping_jacks"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/tvExerciseName"
        app:layout_constraintTop_toBottomOf="@id/toolbarExercise"
        />
    <TextView
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:textColor="@color/ColorAccent"
        android:text="@string/exercisename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvExerciseName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImage"
        />
    <FrameLayout
        android:id="@+id/flExerciseView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:background="@drawable/item_circular_color_accent_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvExerciseName">

        <ProgressBar
            android:id="@+id/progressBarExercise"
            style="?android:attr/progressBarStyleHorizontal"
            android:max="30"
            android:background="@drawable/circular_progress_grey"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:indeterminate="false"
            android:progress="300"
            android:rotation="-90"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/item_circular_accent_background"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/tvTimerExercise"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:text="@string/_30"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </FrameLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvExerciseStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flExerciseView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="5dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>